# fpcli

./: Cargo.toml  README.md
src/: bare_install.rs  main.rs  utils.rs
