[package]
name = "fpcli"
authors = ["louib <code@louib.net>"]

repository = "https://github.com/louib/fpcli"
description = "A CLI app for Flatpak manifests."

keywords = [
  "flatpak",
  "linux",
  "cli"
]

license = "MIT"
readme = "README.md"

version = "0.3.1"
rust-version = "1.56"
edition = "2018"

include = [
  "src/",
  "README.md",
  "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatpak-rs = { version = "0.18" }

clap = { version = "3", features = ["derive"] }
